[gd_scene load_steps=11 format=2]

[ext_resource path="res://Resources/Fonts/Sans-40.tres" type="DynamicFont" id=1]
[ext_resource path="res://Resources/theme.tres" type="Theme" id=2]
[ext_resource path="res://Resources/Fonts/Sans-50-bold.tres" type="DynamicFont" id=3]
[ext_resource path="res://Modules/Menu/Scripts/VersusStart.gd" type="Script" id=4]
[ext_resource path="res://Resources/Themes/GreenSquareStyleBox.tres" type="StyleBox" id=5]
[ext_resource path="res://Resources/Fonts/Sans-40-bold.tres" type="DynamicFont" id=6]
[ext_resource path="res://Resources/Themes/FlatSquareStyleBox.tres" type="StyleBox" id=7]
[ext_resource path="res://Resources/Themes/BlueSquareStyleBox.tres" type="StyleBox" id=8]
[ext_resource path="res://Resources/Themes/OrangeSquareStyleBox.tres" type="StyleBox" id=9]

[sub_resource type="ButtonGroup" id=1]

[node name="VersusStart" type="Node2D"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 576.0
margin_bottom = 1024.0
color = Color( 0, 0, 0, 0.631373 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="PanelContainer" parent="."]
margin_left = 107.045
margin_top = 100.092
margin_right = 464.045
margin_bottom = 559.091
theme = ExtResource( 2 )
custom_styles/panel = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pricing" type="Label" parent="."]
margin_left = 217.726
margin_top = 290.751
margin_right = 399.726
margin_bottom = 357.751
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Duel (1 on 1)
You can win 1.5$"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 128.362
margin_top = 136.479
margin_right = 510.362
margin_bottom = 259.479
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Test your skills
against another player!
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="."]
margin_left = 239.275
margin_top = 454.59
margin_right = 431.275
margin_bottom = 499.59
theme = ExtResource( 2 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
disabled = true
text = "Find a Room"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 136.07
margin_top = 453.134
margin_right = 187.07
margin_bottom = 498.134
theme = ExtResource( 2 )
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = ExtResource( 9 )
custom_styles/disabled = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="LineEdit" parent="."]
margin_left = 153.568
margin_top = 381.774
margin_right = 420.568
margin_bottom = 428.774
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
max_length = 32
clear_button_enabled = true
placeholder_text = "Username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 177.078
margin_top = 304.153
margin_right = 210.078
margin_bottom = 328.153
pressed = true
group = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="text_changed" from="Username" to="." method="_on_Username_text_changed"]
